<resources>
    <string name="app_name">taskmaster</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="third_fragment_label" />
    <string name="add_task" />
    <string name="Back" />
    <string name="All_Tasks" />
    <string name="my_tasks">my Tasks</string>
    <string name="all_task">All Task</string>
    <string name="task_description">Task Description</string>
    <string name="task_title">task_title</string>
    <string name="title_activity_task_details">TaskDetails</string>
    <string name="title">Title</string>
    <string name="task_desc"> Lorem Ipsum</string>
    <string name="first_task">first task</string>
    <string name="third_task">third task</string>
    <string name="second_task">second task</string>
</resources>