<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:text="@string/my_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_third"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/first_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_task"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="577dp" />

    <Button
        android:id="@+id/second_task"
        android:layout_width="112dp"
        android:layout_height="47dp"
        android:text="@string/second_task"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="578dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/third_task"
        android:layout_width="87dp"
        android:layout_height="41dp"
        android:text="@string/third_task"
        app:layout_anchor="@+id/third_task"
        app:layout_anchorGravity="center"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="578dp"
        tools:ignore="MissingConstraints,NotSibling" />
</androidx.constraintlayout.widget.ConstraintLayout>